[project]
name = "tutoanto2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=4.0.0",
]
